# file-retriever

./: .gitignore  Cargo.toml  README.md
.github/workflows/: rust.yml
examples/: multi_download_example.rs
examples/in/example.com/: links.txt
examples/in/kernel.org/: links.txt
src/: lib.rs
