[package]
name = "file-retriever"
version = "0.1.1"
edition = "2021"
repository = "https://github.com/bigb4ng/retriever"
description = "Concurrent download library with progress bar"
documentation = "https://docs.rs/file-retriever"
keywords = ["file_downloader", "downloader", "download", "requests", "http"]
categories = ["web-programming::http-client", "asynchronous"]
readme = "README.md"
license = "MIT"

[dependencies]
reqwest = "0.12.3"
indicatif = { version = "0.17.8", features = ["tokio"] }
tokio = { version = "1.37.0", features = ["io-std", "fs", "bytes", "macros", "rt", "rt-multi-thread"] }

[dev-dependencies]
http = "1.1.0"
rand = "0.8.5"
tokio = { version = "1.37.0", features = ["io-std", "fs", "bytes", "macros", "rt", "rt-multi-thread", "sync"] }
mockito = "1.4.0"
url = "2.5.0"
argh = "0.1.12"
