[package]
name = "file-retriever"
version = "0.1.4"
edition = "2021"
repository = "https://github.com/bigb4ng/file-retriever"
description = "Concurrent download library with progress bar"
documentation = "https://docs.rs/file-retriever"
keywords = ["file_downloader", "downloader", "download", "requests", "http"]
categories = ["web-programming::http-client", "asynchronous"]
readme = "README.md"
license = "MIT"

[dependencies]
reqwest = "0.12.23"
indicatif = "0.18.0"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt"] }

[dev-dependencies]
http = "1.1.0"
rand = "0.9.2"
tokio = { version = "1.47.1", features = ["fs", "macros", "rt", "rt-multi-thread", "sync"] }
mockito = "1.4.0"
url = "2.5.0"
argh = "0.1.13"
